--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -178,6 +178,10 @@
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/account/account.state.js"></script>
+    <script src="app/about/about.state.js"></script>
+    <script src="app/about/about.service.js"></script>
+    <script src="app/about/about.directive.js"></script>
+    <script src="app/about/about.controller.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 
