--- a/src/main/webapp/app/about/about.html
+++ b/src/main/webapp/app/about/about.html
@@ -3,7 +3,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-10">
 
-            <h6 about-today></h6>
+            <!--<h6 about-today></h6>-->
             <h6 class="text-right" ng-bind="todayMessage"></h6>
 
             <h1 class="text-capitalize text-center" data-translate="about.title">Title</h1>
