--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -3,6 +3,9 @@
         <div class="col-md-4">
             <span class="hipster img-responsive img-rounded"></span>
         </div>
+        <div class="col-md-1">
+            &nbsp;
+        </div>
         <div class="col-md-6 text-center">
             <h1 data-translate="home.title">Welcome!</h1>
             <p class="lead" data-translate="home.subtitle">Your dream furniture from IKEA&reg; is just a few clicks away!</p>
