[demo] add facebook like/share button

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -26,6 +26,18 @@
                     <a href="/#">INFO ON PLACING ORDERS</a> <br><br>
                     Want to see our service in your area? <br>
                     <a href="/#">Contact us</a> and let us know!
+                    <br>
+                    <br>
+                    <br>
+                    <div class="center-block">
+                        <div class="fb-like"
+                             data-href="https://developers.facebook.com/docs/plugins/"
+                             data-layout="button_count"
+                             data-action="like"
+                             data-size="large"
+                             data-show-faces="true"
+                             data-share="true"></div>
+                    </div>
                 </div>
             </div>
 
